--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -8,8 +8,12 @@ $title-strong-weight: 1000;
 $size-4: 0.9rem;
 $size-6: 0.75rem;
 
-$link: #a9bca9;
-$navbar-dropdown-item-hover-color: #a9bca9;
+$link: #EDA989;
+$navbar-dropdown-item-hover-color: #EDA989;
+$navbar-item-hover-background-color: #FDF7F4;
+$navbar-dropdown-item-hover-background-color: #FDF7F4;
+$navbar-item-img-max-height: 4.5rem;
+
 
 $tablet: 768px;
 
