--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -13,6 +13,7 @@ $navbar-dropdown-item-hover-color: #EDA989;
 $navbar-item-hover-background-color: #FDF7F4;
 $navbar-dropdown-item-hover-background-color: #FDF7F4;
 $navbar-item-img-max-height: 4.5rem;
+$column-gap: 1rem;
 
 
 $tablet: 768px;
