--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,6 +1,6 @@
 $family-primary: 'Libre Baskerville', serif;
 $family-secondary: 'Raleway', sans-serif;
-$family-code: 'JetBrains Mono', monospace;
+$family-code: 'Libre Baskerville', serif;
 
 $title-weight: 500;
 $title-strong-weight: 1000;
@@ -8,12 +8,13 @@ $title-strong-weight: 1000;
 $size-4: 0.9rem;
 $size-6: 0.75rem;
 
-$link: #EDA989;
-$navbar-dropdown-item-hover-color: #EDA989;
-$navbar-item-hover-background-color: #FDF7F4;
-$navbar-dropdown-item-hover-background-color: #FDF7F4;
+$link: #6CB6A4;
+$navbar-dropdown-item-hover-color: #6CB6A4;
+$navbar-item-hover-background-color: #E2F2EE;
+$navbar-dropdown-item-hover-background-color: #E2F2EE;
 $navbar-item-img-max-height: 4.5rem;
 $column-gap: 1rem;
+
 
 
 $tablet: 768px;
