--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -1,13 +1,17 @@
 ---
 title: Portfolio
 ---
+<div class="mb-6">
+  <h1 class="title is-spaced has-text-centered">Gallery</h1>
+  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Eigen werk</em></h6>
+</div>
 <%= render "gallery",
   images: [
     "home/goddess",
     "home/mountainhouse",
     "home/meeting",
     "home/geocache1",
-    "home/lives",
+    "home/daisies",
     "home/strawberry"
 
 ] %>
