--- a/pages/work/game.html.eex
+++ b/pages/work/game.html.eex
@@ -1,15 +1,16 @@
 ---
-title: Faraway worlds
+title: Faraway homes
 ---
 <div class="mb-6">
-  <h1 class="title is-spaced has-text-centered">Faraway worlds</h1>
-  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Personal work</em></h6>
+  <h1 class="title is-spaced has-text-centered">Faraway homes</h1>
+  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Eigen werk</em></h6>
 </div>
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
     <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">I have always been intrigued by building and interior design. There are so many extraordinary homes in many different intriguing parts of the world.</p>
+      <p class="mt-6">Of het nu een verlaten huisje verstopt in de bergen is, een park van tiny houses of een kasteel van een huis.. ik ben altijd al geintereseerd geweest in mooie gebouwen en huizen.</p>
     </div>
+     <hr class="has-margin-top-50">
   </div>
 
   <div class="column is-5 is-offset-1">
