Added button page with pictures

--- a/pages/contact.html.eex
+++ b/pages/contact.html.eex
@@ -6,7 +6,7 @@ title: Contact
   <div class="column is-6">
     <h1 class="title is-5 mt-6 is-spaced has-text-centered">Contact</h1>
     <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15">
-      <em>Wat te vertellen of wil je wat vragen?</em>
+      <em>Wat te vertellen of wil je iets vragen?</em>
     </h6>
 
 <div class="field">
