--- a/pages/work/game.html.eex
+++ b/pages/work/game.html.eex
@@ -8,7 +8,7 @@ title: Faraway homes
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
     <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">Of het nu een verlaten huisje verstopt in de bergen is, een park van tiny houses of een kasteel van een huis.. ik ben altijd al geintereseerd geweest in mooie gebouwen en huizen.</p>
+      <p class="mt-6">Of het nu een verlaten huisje verstopt in de bergen is, een park met tiny houses of een kasteel van een huis.. ik ben altijd al geintereseerd geweest in mooie gebouwen en huizen.</p>
     </div>
      <hr class="has-margin-top-50">
   </div>
