--- a/pages/work/wild.html.eex
+++ b/pages/work/wild.html.eex
@@ -8,7 +8,7 @@ title: Out in the Wild
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
     <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik houd ervan om nieuwe plekken te ontdekken en het vinden van een van de vele verstopte schatten in de wereld. Sinds ik aan geocaching doe heb ik zoveel mooie plekken ontdekt.</p>
+      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik houd ervan om nieuwe plekken te ontdekken en het vinden van één van de vele verstopte schatten in de wereld. Sinds ik aan geocaching doe heb ik zoveel mooie plekken ontdekt.</p>
     </div>
      <hr class="has-margin-top-50">
   </div>
