--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -27,7 +27,7 @@ Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde 
 
 <div class="block mt-6 mb-5 is-family-secondary">
   <p class="mb-1"><strong>2017 - heden</strong></p>
-  <p class="mb-1">UI design | Vormgever</p>
+  <p class="mb-1">UI designer | Vormgever</p>
   <p class="is-size-4 is-family-primary"><em>JPB IT Solutions</em></p>
 </div>
 
@@ -45,6 +45,6 @@ Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde 
 
 <div class="block is-family-secondary">
   <p class="mb-1"><strong>2015</strong></p>
-  <p class="mb-1">Freelance workshop docent</p>
+  <p class="mb-1">Freelance photoshop workshop docent</p>
   <p class="is-size-4 is-family-primary"><em>Noorderpoort college</em></p>
 </div>
