--- a/pages/work/game.html.eex
+++ b/pages/work/game.html.eex
@@ -3,7 +3,7 @@ title: Faraway homes
 ---
 <div class="mb-6">
   <h1 class="title is-spaced has-text-centered">Faraway homes</h1>
-  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Eigen werk</em></h6>
+  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Huizen, gebouwen en natuur</em></h6>
 </div>
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
