--- a/pages/contact.html.eex
+++ b/pages/contact.html.eex
@@ -45,7 +45,7 @@ title: Contact
       </div>
 
       <div class="control">
-        <button class="button is-link">Versturen</button>
+        <button class="button is-link" type="submit">Versturen</button>
       </div>
     </form>
   </div>
