Added select name subject

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -12,6 +12,6 @@ title: Portfolio
     "home/meeting",
     "home/geocache1",
     "home/daisies",
-    "home/strawberry"
+    "home/patternhouses"
 
 ] %>
