Added new illustration to home page

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -7,7 +7,7 @@ title: Portfolio
 </div>
 <%= render "gallery",
   images: [
-    "home/goddess",
+    "home/fromhome",
     "home/seasidehomes",
     "home/meeting",
     "home/geocache1",
