Added illustration to home and wild page

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -7,11 +7,11 @@ title: Portfolio
 </div>
 <%= render "gallery",
   images: [
-    "home/fromhome",
+    "home/tropicalhomes",
     "home/seasidehomes",
     "home/daisies",
     "home/patternhouses",
-    "home/meeting",
+    "home/fromhome",
     "home/geocache1"
 
 ] %>
