Swapped illustration on home page, added illustration and text to faraway homes page and image to contact page.

--- a/pages/contact.html.eex
+++ b/pages/contact.html.eex
@@ -1,6 +1,12 @@
 ---
 title: Contact
 ---
+<div class="has-text-centered">
+  <figure class="is-inline-block">
+    <img src="<%= asset "images/contact/tinyhouse.png" %>"</img>
+  </figure>
+</div>
+
 
 <div class="columns is-multiline is-centered">
   <div class="column is-6">
