--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -1,6 +1,7 @@
 ---
 title: Portfolio
 ---
+
 <div class="mb-6">
   <h1 class="title is-spaced has-text-centered">Gallery</h1>
   <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Illustraties</em></h6>
@@ -9,9 +10,8 @@ title: Portfolio
   images: [
     "home/tropicalhomes",
     "home/seasidehomes",
-    "home/daisies",
+    "home/faraway-filled",
     "home/patternhouses",
     "home/fromhome",
-    "home/geocache1"
-
+    "home/plantbabies",
 ] %>
