--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -15,6 +15,10 @@ $navbar-dropdown-item-hover-background-color: #E2F2EE;
 $navbar-item-img-max-height: 4.5rem;
 $column-gap: 1rem;
 
+.is-horizontal-center {
+    justify-content: center;
+  }
+
 
 
 $tablet: 768px;
