Changed image on about page. Swapped image on home page and added image on buttons page

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -9,9 +9,9 @@ title: Portfolio
 <%= render "gallery",
   images: [
     "home/tropicalhomes",
-    "home/seasidehomes",
+    "home/pool",
     "home/faraway-filled",
     "home/patternhouses",
-    "home/fromhome",
-    "home/plantbabies",
+    "home/seasidehomes",
+    "home/plantbabies"
 ] %>
