Added images to gallery on homepage

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -9,9 +9,11 @@ title: Portfolio
 <%= render "gallery",
   images: [
     "home/tropicalhomes",
+    "home/coffee",
+    "home/orangeflowers",
     "home/pool",
-    "home/faraway-filled",
-    "home/patternhouses",
     "home/seasidehomes",
-    "home/plantbabies"
+    "home/plantbabies",
+    "home/patternhouses",
+    "home/faraway-filled"
 ] %>
