Added images to gallery on homepage, about page. Added new page for childrenillustrations.

--- a/pages/about.html.eex
+++ b/pages/about.html.eex
@@ -9,7 +9,7 @@ title: About
     </h6>
 
     <div class="block mt-6 is-family-secondary has-text-centered">
-Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Een periode ben ik freelancer geweest en heb ik aan verschillende opdrachten gewerkt. Momenteel ben ik werkzaam als UI designer en verzorg ik de vormgeving voor het bedrijf waar ik werk. Ik ben veelzijdig en vind het dan ook erg leuk om verschillende vormen van creativiteit te kunnen beoefenen. 
+Hallo! ik ben Sannet, enthousiaste illustrator en vormgever.  In 2015 studeerde ik af als illustrator aan Academie Minerva in Groningen. Een periode ben ik freelancer geweest en heb ik aan verschillende opdrachten gewerkt. Momenteel ben ik werkzaam als UI designer en verzorg ik de vormgeving voor het bedrijf waar ik in dienst ben. Ik ben veelzijdig en vind het dan ook erg leuk om verschillende vormen van creativiteit te kunnen beoefenen maar mijn passie is het maken van illustraties en kinderillustraties. 
     </div>
   </div>
 
