--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -10,10 +10,10 @@ title: Portfolio
   images: [
     "home/tropicalhomes",
     "home/coffee",
-    "home/orangeflowers",
+    "home/whales",
     "home/pool",
-    "home/seasidehomes",
-    "home/plantbabies",
+    "home/forestlady",
+    "home/kitties",
     "home/patternhouses",
-    "home/faraway-filled"
+    "home/seasidehomes"
 ] %>
