--- a/pages/work/game.html.eex
+++ b/pages/work/game.html.eex
@@ -15,7 +15,7 @@ title: Faraway homes
 
   <div class="column is-4 is-offset-1">
     <p class="image">
-    <img class="is-rounded" src="<%= asset "images/game/faraway.png" %>"></img>
+    <img class="is-rounded" src="<%= asset "images/game/skyrock.png" %>"></img>
     </p>
   </div>
   <div class="column is-4 is-offset-1">
