--- a/pages/work/wild.html.eex
+++ b/pages/work/wild.html.eex
@@ -8,28 +8,14 @@ title: Out in the Wild
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
     <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik vind het geweldig om nieuwe plekken te ontdekken en sinds ik aan geocaching doe heb ik zoveel mooie plekken ontdekt.</p>
+      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik vind het geweldig om nieuwe plekken te ontdekken en sinds ik aan geocaching doe heb ik zoveel mooie plekken ontdekt. Het duurde even voordat ik de allereerste geocache had gevonden, ik had een lastige start. Maar ik vond het heerlijk om meer tijd in de natuur door te brengen en meer te wandelen.</p>
     </div>
      <hr class="has-margin-top-50">
   </div>
 
   <div class="column is-4 is-offset-1">
     <p class="image">
-    <img src="<%= asset "images/wild/geocache1.png" %>"></img>
+    <img src="<%= asset "images/wild/location.png" %>"></img>
     </p>
-  </div>
-  
-  <div class="columns is-6 is-offset-2">
-    <p class="image">
-      <img class="is-rounded" src="<%= asset "images/wild/flowers.png" %>"></img>
-    </p>
-  </div>
-
-  <div class="column is-6 is-offset-2">
-    <div class="column is-12">
-      <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">Het duurde even voordat ik de allereerste geocache had gevonden, ik had een lastige start. Maar ik vond het heerlijk om meer tijd in de natuur door te brengen en meer te wandelen.</p>
-    </div>
-     <hr class="has-margin-top-50">
   </div>
 </div>
