Added images to all pages, removed old images. and changed logo

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -13,10 +13,10 @@ title: Portfolio
     "home/nope",
     "home/whales",
     "home/story",
+    "home/Birbparty",
     "home/forestlady",
-    "home/kitties",
-    "home/brew",
+    "home/Birbpoop",
     "home/pool",
     "home/skyrock",
-    "home/seasidehomes"
+    "home/brew"
 ] %>
