--- a/pages/work/wild.html.eex
+++ b/pages/work/wild.html.eex
@@ -8,7 +8,7 @@ title: Out in the Wild
 <div class="columns is-multiline is-vcentered">
   <div class="column is-6">
     <div class="block mt-6 is-family-secondary has-text-centered">
-      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik vind het geweldig om nieuwe plekken te ontdekken en sinds ik aan geocaching doe heb ik zoveel mooie plekken ontdekt. Het duurde even voordat ik de allereerste geocache had gevonden, ik had een lastige start. Maar ik vond het heerlijk om meer tijd in de natuur door te brengen en meer te wandelen.</p>
+      <p class="mt-6">Wandelen in het bos, door de bergen en onverwachts een mooi meer ontdekken na een lange rit door een weiland.. Ik vind het geweldig om nieuwe plekken te ontdekken, mede hierom raakte ik geintereseerd in geocaching. Het duurde even voordat ik de allereerste geocache had gevonden, ik had een lastige start. Maar ik vond het heerlijk om meer tijd in de natuur door te brengen en ik was nog nooit zo blij dat ik iets had gevonden. Elke geocache is weer een nieuw avontuur!</p>
     </div>
      <hr class="has-margin-top-50">
   </div>
