--- a/pages/work/buttons.html.eex
+++ b/pages/work/buttons.html.eex
@@ -1,14 +1,14 @@
 ---
-title: Buttons
+title: Drawings on the wall
 ---
 
 <div class="mb-6">
-  <h1 class="title is-spaced has-text-centered">Buttons</h1>
-  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Illustraties op een klein oppervlak</em></h6>
+  <h1 class="title is-spaced has-text-centered">Patronen</h1>
+  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Tekeningen in een patroontje</em></h6>
 </div>
 <%= render "gallery",
   images: [
-    "home/button1",
-    "home/keychain1",
-    "home/button2"
+    "patterns/Birbpoop",
+    "patterns/kitties",
+    "patterns/vierkanthuisjes"
   ] %>
