Added images to homepage, changed text in homepage, added icon and link to redbubble shop

--- a/pages/work/buttons.html.eex
+++ b/pages/work/buttons.html.eex
@@ -9,6 +9,6 @@ title: Drawings on the wall
 <%= render "gallery",
   images: [
     "patterns/Birbpoop",
-    "patterns/kitties",
+    "patterns/doggos",
     "patterns/vierkanthuisjes"
   ] %>
