--- a/includes/nav.html.eex
+++ b/includes/nav.html.eex
@@ -55,6 +55,11 @@
           <i class="zmdi zmdi-instagram zmdi-hc-lg"></i>
         </span>
       </a>
+      <a href="https://SanandSo.redbubble.com" target="_blank" class="navbar-item">
+        <span class="icon">
+          <i class="zmdi zmdi-store zmdi-hc-lg"></i>
+        </span>
+      </a>
     </div>
   </div>
 </nav>
