--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -3,20 +3,20 @@ title: Portfolio
 ---
 
 <div class="mb-6">
-  <h1 class="title is-spaced has-text-centered">Gallery</h1>
-  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Illustraties</em></h6>
+  <h1 class="title is-spaced has-text-centered">Illustraties</h1>
+  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Mijn werk</em></h6>
 </div>
 <%= render "gallery",
   images: [
     "home/apps",
     "home/location",
-    "home/nope",
-    "home/whales",
+    "home/doggos",
+    "home/hike",
     "home/story",
     "home/Birbparty",
-    "home/forestlady",
+    "home/nope",
     "home/Birbpoop",
-    "home/pool",
+    "home/whales",
     "home/skyrock",
     "home/brew"
 ] %>
