Replaced images on home page, new stuff.

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -11,12 +11,10 @@ title: Portfolio
     "home/apps",
     "home/location",
     "home/doggos",
-    "home/hike",
-    "home/story",
-    "home/Birbparty",
-    "home/nope",
+    "home/shopping",
+    "home/duck",
+    "home/gardencats",
     "home/Birbpoop",
-    "home/whales",
-    "home/skyrock",
-    "home/brew"
+    "home/brew",
+    "home/skyrock"
 ] %>
