--- a/includes/nav.html.eex
+++ b/includes/nav.html.eex
@@ -14,27 +14,19 @@
 
   <div id="portfolioNavbar" class="navbar-menu">
     <div class="navbar-start" >
-      <div class="navbar-item has-dropdown is-hoverable">
-        <span class="navbar-link">
+      <div class="navbar-item is-hoverable">
+        <a class="navbar-item" href="<%= page "index" %>">
           Illustraties
-        </span>
+        </a>
 
-        <div class="navbar-dropdown">
-          <%= for page <- Enum.filter(@all_pages, & String.starts_with?(&1.url, "/work/")) do %>
-            <a class="navbar-item" href="<%= page.url %>">
-              <%= page.title %>
-            </a>
-          <% end %>
-        </div>
+        <a class="navbar-item" href="<%= page "about" %>">
+          Over mij
+        </a>
+
+        <a class="navbar-item" href="<%= page "contact" %>">
+          Contact
+        </a>
       </div>
-
-      <a class="navbar-item" href="<%= page "about" %>">
-        Over mij
-      </a>
-
-      <a class="navbar-item" href="<%= page "contact" %>">
-        Contact
-      </a>
     </div>
 
     <div class="navbar-end">
