--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -1,20 +1,17 @@
 ---
 title: Portfolio
 ---
-
-<div class="mb-6">
-  <h1 class="title is-spaced has-text-centered">Illustraties</h1>
-  <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15"><em>Mijn werk</em></h6>
-</div>
 <%= render "gallery",
   images: [
-    "home/apps",
-    "home/location",
-    "home/doggos",
-    "home/shopping",
-    "home/duck",
-    "home/gardencats",
-    "home/Birbpoop",
-    "home/brew",
-    "home/skyrock"
+    "home/slaaptent",
+    "home/mini",
+    "home/wolkje",
+    "home/snooze2",
+    "home/astro",
+    "home/bunny",
+    "home/hometown",
+    "home/girl",
+    "home/duckcloud",
+    "home/coffeefox",
+    "home/trip"
 ] %>
