--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,22 +1,35 @@
-$family-primary: 'Libre Baskerville', serif;
+$family-primary: 'Amatic SC', cursive;;
 $family-secondary: 'Raleway', sans-serif;
-$family-code: 'Libre Baskerville', serif;
+$family-code: 'Amatic SC', cursive;
 
-$title-weight: 500;
+$title-weight: 600;
 $title-strong-weight: 1000;
 
-$size-4: 0.9rem;
-$size-6: 0.75rem;
+$size-1: 1rem;
+$size-2: 1rem;
+$size-4: 1rem;
+$size-5: 2.5rem;
+$size-6: 1.5rem;
 
-$link: #6CB6A4;
-$navbar-dropdown-item-hover-color: #6CB6A4;
-$navbar-item-hover-background-color: #E2F2EE;
-$navbar-dropdown-item-hover-background-color: #E2F2EE;
+$link: #9DB1AA;
+$navbar-dropdown-item-hover-color: #BBD3CA;
+$navbar-item-hover-background-color: #EFF4F2;
+$navbar-dropdown-item-hover-background-color: #EFF4F2;
 $navbar-item-img-max-height: 4.5rem;
 $column-gap: 1rem;
 
 .is-horizontal-center {
     justify-content: center;
+  }
+
+  .navbar-link {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+  .navbar-item {
+    font-size: 1.2rem;
+    font-weight: 600;
   }
 
 
