Added websafe fonts

--- a/src/sass/bulma.custom.scss
+++ b/src/sass/bulma.custom.scss
@@ -1,6 +1,6 @@
-$family-primary: 'Amatic SC', cursive;;
+$family-primary: 'Amatic SC', 'Helvetica';
 $family-secondary: 'Raleway', sans-serif;
-$family-code: 'Amatic SC', cursive;
+$family-code: 'Amatic SC', 'Helvetica';
 
 $title-weight: 600;
 $title-strong-weight: 1000;
