--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -6,12 +6,14 @@ title: Portfolio
     "home/slaaptent",
     "home/mini",
     "home/wolkje",
-    "home/snooze2",
+    "home/me",
     "home/astro",
     "home/bunny",
     "home/hometown",
     "home/girl",
     "home/duckcloud",
-    "home/coffeefox",
+    "home/snooze2",
+    "home/coffee",
     "home/trip"
+    
 ] %>
