--- a/pages/contact.html.eex
+++ b/pages/contact.html.eex
@@ -4,9 +4,8 @@ title: Contact
 
 <div class="columns is-multiline is-centered">
   <div class="column is-6">
-    <h1 class="title is-5 mt-6 is-spaced has-text-centered">Contact</h1>
     <h6 class="subtitle is-6 has-text-centered has-margin-top-minus-15">
-      <em>Wat te vertellen of wil je iets vragen?</em>
+      Wat te vertellen of wil je iets vragen?
     </h6>
     
     <form name="contact" method="POST" data-netlify="true">
