--- a/includes/nav.html.eex
+++ b/includes/nav.html.eex
@@ -42,7 +42,7 @@
         </span>
       </a>
 
-      <a href="https://instagram.com/sannetbo" target="_blank" class="navbar-item">
+      <a href="https://instagram.com/san_and_so" target="_blank" class="navbar-item">
         <span class="icon">
           <i class="zmdi zmdi-instagram zmdi-hc-lg"></i>
         </span>
