New illustrations added part 3

--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -4,13 +4,13 @@ title: Portfolio
 <%= render "gallery",
   images: [
     "home/bday",
-    "home/sushi",
+    "home/cups",
     "home/tea",
     "home/wolkje",
-    "home/astro",
+    "home/sushi",
     "home/bunny",
     "home/hometown",
-    "home/recipe",
+    "home/red",
     "home/duckcloud",
     "home/snooze2",
     "home/coffee",
