--- a/pages/index.html.eex
+++ b/pages/index.html.eex
@@ -7,7 +7,7 @@ title: Portfolio
     "home/hi",
     "home/jungle",
     "home/bluebird",
-    "home/burrow",
+    "home/Bunnies",
     "home/bear",
     "home/friends",
     "home/me",
